# conan-graphicsmagick

./: .gitignore  CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  test_package.c
